# RenderDocMCP

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  renderdoc-mcp-improvement-proposal.md  requirements.txt
mcp_server/: __init__.py  config.py  server.py
mcp_server/bridge/: __init__.py  client.py
renderdoc_extension/: __init__.py  extension.json  renderdoc_facade.py  request_handler.py  socket_server.py
renderdoc_extension/services/: pipeline_service.py
scripts/: install_extension.py
