[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renderdoc-mcp"
version = "1.0.0"
description = "MCP server for RenderDoc graphics debugging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
renderdoc-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
